<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Forward Via Email</string>
    <string name="clear_log">Clear Log</string>
    <string name="sender">Sender</string>
    <string name="senderemailaddress">SenderEmailAddress</string>
    <string name="senderemailpassword">SenderEmailPassword</string>
    <string name="sender_server_config">Sender Server Config</string>
    <string name="serverhost">ServerHost</string>
    <string name="serverport">ServerPort</string>
    <string name="socketfactoryport">SocketFactoryPort</string>
    <string name="autenticationenabled">AutenticationEnabled</string>
    <string name="receiver">Receiver</string>
    <string name="receiveremailaddress">ReceiverEmailAddress</string>
    <string name="sms_content_send_via_email_subject_for_email_filter">SMS Content Send Via Email Subject(For Email Filter)</string>
    <string name="send_a_test_email">Send A Test Email</string>
    <string name="show_running_notification">Show Running Notification</string>
    <string name="start_service">Start Service</string>
    <string name="stop_and_edit_config">Stop and Edit Config</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="delete_this_log">Delete This Log?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="need_permission"><![CDATA[>>>NEED PERMISSIONS<<<!!!]]></string>
    <string name="delete_all_log">Delete All Mail Log?</string>
    <string name="time_out">time out</string>
    <string name="app_is_running">%s is Running</string>
    <string name="app_running_tip">All SMS will forward to [%s]</string>
    <string name="app_stop_tip">All SMS stop forward to [%s]</string>
    <string name="app_started">SMS forward started!</string>
    <string name="full_address">full address</string>
    <string name="password">password/authorization code</string>
    <string name="check_tip">If SMS contains \'restart\', device will restart this app.</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="send_in_coming_call_mail">Send In Coming Call Mail</string>
    <string name="reject_in_coming_calls">Reject In Coming Calls</string>
    <string name="loadmore">Load More</string>
    <string name="loading">Loading</string>
    <string name="loadfail">Load Fail</string>
    <string name="remote_send_sms">Remote Send SMS</string>
    <string name="command_email_host">Command Email Host</string>
    <string name="command_email_username">Command Email Username</string>
    <string name="command_email_password">Command Email Password</string>
    <string name="command_email_check_time">Command Email Check Time</string>
    <string name="command_receiver_server_config">Command Receiver Server Config</string>
    <string name="seconds">seconds</string>
    <string name="command_verify_code">Command Verify Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="copy_sender_config">Copy Sender Config</string>
    <string name="ignore_crank_calls">Ignore Crank Calls</string>
</resources>
