<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/loadmore"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/loading"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_load_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/loadfail"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

</LinearLayout>